Version 3.2.3
-------------
Improved reading journal updates

Version 3.2.2
-------------
Fix potential nullpointer exception when you have blueprints with all grades at 0%.

Version 3.2.1
-------------
Fix CAPI authentication

Version 3.2.0
-------------
New import windows that show you what is to be imported and allow you to accept/refuse
Import windows added for: wishlists, ship builds, loadouts and engineer pin configuration
Added link to About section for engineer pin planner. Clicking the link will open a webpage with you current pin configuration. You can then import your changes back into EDOMH.
Added hotkeys to wishlists, ship build and loadout screens. These are listed under the Options button. CTRL + V is not listed, but works globally and will trigger the appropriate import window.
Added category to ship wishlist ingredients

Version 3.1.12
-------------
Fixed a bug where calculated module stats were used instead of existing stats from the journal

Version 3.1.11
-------------
Updated armour resistance calculations to match ingame values

Version 3.1.10
-------------
Add fuzzy text matching support to bartender menu
Fix exporting things to xlsx

Version 3.1.9
-------------
Correct Capsian Explorer top/boost speeds
Fix Mk2 FSD fuel stats so it also calculates correctly when fuel < max fuel use
Changed jump range to show actual range(as depicted in the maintenance panel)
- Outfitting and the right hand panel show the wrong values and can be multiple Ly off.
Added a tooltip to clarify this

Version 3.1.8
-------------
Add Capsian Explorer images and slot locations
Finalized ship stats for Capsian Explorer
Updated stats for new FSD's, gravity thrusters and armours
Updated weapon damage, rate of fire and/or magazine size for AR-50, C-44, Eclipse and Oppressor

Version 3.1.7
-------------
Fixed stats for size 8 FSDs

Version 3.1.6
-------------
Removed non-existent Caspian Explorer Armours
Swapped Mk2 with Mk1 for Caspian Explorer Armours