@@ -2889,7 +2889,7 @@
               -fx-cursor: hand;
               -fx-text-fill: #2e92df;
               -fx-alignment: bottom-right;
-              -fx-padding: 0.25em 0.25em 0em 0em; }
+              -fx-padding: 0.25em; }
               .shipbuilder-details-popover .module-details .legacy-save:hover {
                 -fx-text-fill: #5aa9e6; }
             .shipbuilder-details-popover .module-details .properties {
